<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/card_details"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_holder"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txn_type"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/exp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/card_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txn_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>