<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/subtotal"
        android:textSize="@dimen/font_big" />

    <TextView
        android:id="@+id/amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/amount"
        android:text="@string/zero_amount"
        android:textSize="@dimen/font_big" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/primary_button_shape"
            android:onClick="clear"
            android:text="@string/clear"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/capture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/secondary_button_shape"
            android:onClick="capture"
            android:text="@string/capture"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>